--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <artifactId>docker-maven-plugin</artifactId>
         <version>0.4.3</version>
         <configuration>
-          <imageName>zhangfuli/spring-boot-docker-0.1.0.jar</imageName>
+          <imageName>zhangfuli/gs-spring-boot-docker 0.1.0</imageName>
           <dockerDirectory>/</dockerDirectory>
           <resources>
             <resource>
