--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.springframework</groupId>
-  <artifactId>gs-spring-boot-docker</artifactId>
-  <version>0.1.0</version>
+
+  <groupId>test</groupId>
+  <artifactId>docker-spring-boot</artifactId>
+  <packaging>jar</packaging>
+  <version>1.0.0</version>
+  <name>docker-spring-boot</name>
+  <description>Getting started with Spring Boot and Docker</description>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.4.RELEASE</version>
+    <version>1.3.3.RELEASE</version>
+    <relativePath/>
   </parent>
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -24,19 +28,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <!-- tag::plugin[] -->
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <version>0.4.3</version>
         <configuration>
-          <imageName>zhangfuli/gs-spring-boot-docker 0.1.0</imageName>
-          <dockerDirectory>/</dockerDirectory>
+          <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+          <dockerDirectory>src/main/docker</dockerDirectory>
           <resources>
             <resource>
               <targetPath>/</targetPath>
@@ -46,6 +52,13 @@
           </resources>
         </configuration>
       </plugin>
+      <!-- end::plugin[] -->
     </plugins>
   </build>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <docker.image.prefix>zhangfuli</docker.image.prefix>
+    <spring.boot.version>1.3.3.RELEASE</spring.boot.version>
+  </properties>
 </project>
